Fuly refractor the codebase
Introduces a new core PlaceholderEngine and related classes for placeholder processing, replacing previous service-based file processing. Refactors controllers to use the new engine and service, updates async and security configuration, and removes legacy service and utility classes. Updates environment setup, improves batch and single file transform endpoints, and adds performance profiling and validation. Cleans up dependencies and configuration files.